--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ quarkus:
     username: ${JDBC_DATABASE_USERNAME}
     password: ${JDBC_DATABASE_PASSWORD}
     jdbc:
-      url: ${JDBC_DATABASE_URL}
+      url: ${JDBC_POSTGRES_DATABASE}
 
   hibernate-orm:
     database:
