--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ quarkus:
     instrumentation: true
 
   http:
-    port: ${PORT:8080}
+    port: 8080
   
   smallrye-openapi:
     path: /swagger
@@ -18,7 +18,7 @@ quarkus:
     username: ${JDBC_DATABASE_USERNAME}
     password: ${JDBC_DATABASE_PASSWORD}
     jdbc:
-      url: ${JDBC_POSTGRES_DATABASE}
+      url: ${JDBC_DATABASE_URL}
 
   hibernate-orm:
     database:
