Ajustes de cors

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,9 @@ quarkus:
 
   http:
     port: ${PORT:8080}
+    cors: 
+      origins: "**"
+      ~: true
   
   smallrye-openapi:
     path: /swagger
